--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-logging.level.org.zalando.logbook: TRACE
+logging.level.org.zalando.logbook=TRACE
+spring.sql.init.mode=always
+spring.datasource.url=jdbc:h2:file:./db/filmorate;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=9090
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
